--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:18.1.0'
     testImplementation 'junit:junit:4.12'
     implementation 'com.github.bumptech.glide:glide:4.7.1'
+    implementation 'com.firebaseui:firebase-ui-storage:4.1.0'
     // Glide v4 uses this new annotation processor -- see https://bumptech.github.io/glide/doc/generatedapi.html
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
