--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,21 +21,28 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+
+    implementation 'com.getbase:floatingactionbutton:1.10.1'
     implementation 'com.firebaseui:firebase-ui-storage:4.1.0'
     implementation 'com.android.support:multidex:1.0.3'
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.google.firebase:firebase-core:16.0.7'
-    implementation 'com.google.firebase:firebase-auth:16.2.0'
+    implementation 'com.google.firebase:firebase-core:16.0.8'
+    implementation 'com.google.firebase:firebase-auth:16.2.1'
     implementation 'com.google.firebase:firebase-database:16.1.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.google.firebase:firebase-storage:16.1.0'
     implementation 'com.firebase:firebase-client-android:2.5.0'
-    implementation 'com.google.firebase:firebase-firestore:18.1.0'
+    implementation 'com.google.firebase:firebase-firestore:18.2.0'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
     testImplementation 'junit:junit:4.12'
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     implementation 'com.firebaseui:firebase-ui-storage:4.1.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    //compile 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
     // Glide v4 uses this new annotation processor -- see https://bumptech.github.io/glide/doc/generatedapi.html
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
